# kaggle-test

./: pyproject.toml  submission.csv
spaceship/: spaceship.py
