[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["hatef madani <hatefmdn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^22.3.0"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
